--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mantine/core": "^7.14.2",
     "@mantine/hooks": "^7.14.3",
     "@mui/material": "^6.1.8",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
